Expanded pseudo to improve readability.  Last fix to logic assigning stick image randomly to one of the images

--- a/fetch.css
+++ b/fetch.css
@@ -1,13 +1,37 @@
-* {
-  outline: 1px solid red;
+body {
+  background-color: lightblue;
 }
-
-
 h1 {
-  color: green;
+  color: white;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+#main-container {
+  display: flex;
+  flex-direction: column;
+}
+#central-container {
+  display: flex;
+  justify-content: space-between;
+}
+#left-image,
+#right-image,
+#button-content {
+  flex: 1;
+  margin: 10px;
+  background-color: lightblue;
+  padding: 20px;
   text-align: center;
 }
-
-#main-container{
-  display: flex;
+#fetch-dog {
+  color: darkolivegreen;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+#score {
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
+}
+#footer {
+  background-color: lightgrey;
 }
